--- a/using_mystyle.ipynb
+++ b/using_mystyle.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0ff7cba7",
    "metadata": {},
    "outputs": [
@@ -879,12 +879,13 @@
     "y = [2, 6, 4, 3, 9]\n",
     "y2 = [2, 6, 4, 3, 9]\n",
     "\n",
-    "mystyle.line_plot(x, y, \"Single Line Chart\", \"time\", \"orders\")"
+    "fig = mystyle.line_plot(x, y, \"Single Line Chart\", \"time\", \"orders\")\n",
+    "fig.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "1bf33b32",
    "metadata": {},
    "outputs": [
@@ -2699,8 +2700,10 @@
     "y_lines = [y, y2, y3]\n",
     "yaxis_names = ['foo', 'bar', 'baz']\n",
     "\n",
-    "mystyle.multi_line_plot(x_lines, y_lines, yaxis_names, \"Multiple Line Chart\", \"time\", \"orders\")\n",
-    "mystyle.multi_line_plot(x_lines, y_lines, yaxis_names, \"Multiple Line Chart\", \"time\", \"orders\", True)"
+    "fig = mystyle.multi_line_plot(x_lines, y_lines, yaxis_names, \"Multiple Line Chart\", \"time\", \"orders\")\n",
+    "fig.show()\n",
+    "step_fig = mystyle.multi_line_plot(x_lines, y_lines, yaxis_names, \"Multiple Line Chart\", \"time\", \"orders\", True)\n",
+    "step_fig.show()"
    ]
   }
  ],
