--- a/using_mystyle.ipynb
+++ b/using_mystyle.ipynb
@@ -2705,11 +2705,71 @@
     "step_fig = mystyle.multi_line_plot(x_lines, y_lines, yaxis_names, \"Multiple Line Chart\", \"time\", \"orders\", True)\n",
     "step_fig.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "065fe30f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "31688y 269d\n",
+      "63y 137d\n",
+      "31y 251d\n",
+      "11d 13h\n",
+      "20m 34s\n",
+      "1m 5s\n",
+      "1.23s\n",
+      "1.23ms\n",
+      "1.23us\n",
+      "1.23ns\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mystyle.time_format(1e12))\n",
+    "print(mystyle.time_format(2e9))\n",
+    "print(mystyle.time_format(1e9))\n",
+    "print(mystyle.time_format(1e6))\n",
+    "print(mystyle.time_format(1234))\n",
+    "print(mystyle.time_format(65.2))\n",
+    "print(mystyle.time_format(1.234))\n",
+    "print(mystyle.time_format(0.001234))\n",
+    "print(mystyle.time_format(0.000001234))\n",
+    "print(mystyle.time_format(0.000000001234))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6e169703",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1d 0h\n",
+      "1h 0m\n",
+      "1m 0s\n",
+      "1.00s\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mystyle.time_format(86400))\n",
+    "print(mystyle.time_format(3600))\n",
+    "print(mystyle.time_format(60))\n",
+    "print(mystyle.time_format(1))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dev_venv",
+   "display_name": "dev_venv (3.12.3)",
    "language": "python",
    "name": "python3"
   },
