update for ms rendering

--- a/using_mystyle.ipynb
+++ b/using_mystyle.ipynb
@@ -2708,7 +2708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "065fe30f",
    "metadata": {},
    "outputs": [
@@ -2723,6 +2723,7 @@
       "20m 34s\n",
       "1m 5s\n",
       "1.23s\n",
+      "206ms\n",
       "1.23ms\n",
       "1.23us\n",
       "1.23ns\n"
@@ -2737,6 +2738,7 @@
     "print(mystyle.time_format(1234))\n",
     "print(mystyle.time_format(65.2))\n",
     "print(mystyle.time_format(1.234))\n",
+    "print(mystyle.time_format(0.20583))\n",
     "print(mystyle.time_format(0.001234))\n",
     "print(mystyle.time_format(0.000001234))\n",
     "print(mystyle.time_format(0.000000001234))"
@@ -2744,7 +2746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "6e169703",
    "metadata": {},
    "outputs": [
@@ -2755,7 +2757,7 @@
       "1d 0h\n",
       "1h 0m\n",
       "1m 0s\n",
-      "1.00s\n"
+      "1s\n"
      ]
     }
    ],
