--- a/using_mystyle.ipynb
+++ b/using_mystyle.ipynb
@@ -2722,10 +2722,17 @@
       "11d 13h\n",
       "20m 34s\n",
       "1m 5s\n",
+      "12s\n",
+      "10.1s\n",
+      "10.0s\n",
       "1.23s\n",
       "206ms\n",
       "1.23ms\n",
+      "123us\n",
+      "12.3us\n",
       "1.23us\n",
+      "123ns\n",
+      "12.3ns\n",
       "1.23ns\n"
      ]
     }
@@ -2737,10 +2744,17 @@
     "print(mystyle.time_format(1e6))\n",
     "print(mystyle.time_format(1234))\n",
     "print(mystyle.time_format(65.2))\n",
+    "print(mystyle.time_format(12))\n",
+    "print(mystyle.time_format(10.1))\n",
+    "print(mystyle.time_format(10))\n",
     "print(mystyle.time_format(1.234))\n",
     "print(mystyle.time_format(0.20583))\n",
     "print(mystyle.time_format(0.001234))\n",
+    "print(mystyle.time_format(0.0001234))\n",
+    "print(mystyle.time_format(0.00001234))\n",
     "print(mystyle.time_format(0.000001234))\n",
+    "print(mystyle.time_format(0.0000001234))\n",
+    "print(mystyle.time_format(0.00000001234))\n",
     "print(mystyle.time_format(0.000000001234))"
    ]
   },
